fix(firefox): tab preview tooltip spacing

--- a/src/firefox/browser/popup/tabpreview.scss
+++ b/src/firefox/browser/popup/tabpreview.scss
@@ -10,6 +10,10 @@
 	margin: 0;
 }
 
+.tab-preview-content-main {
+	padding: 0;
+}
+
 .tab-preview-note-container {
 	margin: 0;
 
@@ -25,7 +29,7 @@
 }
 
 .tab-preview-text-container {
-	padding: 0;
+	margin: 0;
 }
 
 .tab-preview-thumbnail-container {
